# palautusrepositorio

./: .coveragerc  MOIKKA.txt  README.md
nhl-statistics-1/src/: index.py  statistics_service.py
nhl-statistics-1/src/tests/: .coverage  statistics_service_test.py  stats_for_testing.txt
viikko2/: haara2.txt
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/login-robot/: log.html  output.xml  report.html
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/web-login/: log.html  output.xml  report.html
viikko3/web-login/src/: AppLibrary.py
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: login.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/verkkokauppa/: .coverage  testi.txt
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/laskin/src/: kayttoliittyma.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/kivi-paperi-sakset/src/: index.py  kps.py
